@@ -3815,3 +3815,4 @@ Changelog for GXemul:
 		main GXemul class and the unit test framework have been
 		incorporated now.
 		Moving RELEASE.html to doc/.
+20090109	Merging in more C++ classes: Checksum.
